<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/llReceivedMessage"
    android:layout_marginTop="6dp"
    android:longClickable="true"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="40dp"
        app:cardMaxElevation="10dp"
        style="@style/cardViewBackground"
        android:id="@+id/cvDateDisplay"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Today"
            android:fontFamily="sans-serif"
            android:id="@+id/tvDateDisplay"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:id="@+id/llMessageOverview"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minWidth="150dp"
            android:background="@drawable/received_message_background"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="10dp"
            android:id="@+id/llReceivedMessageBackground"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="5dp"
                style="@style/receiverSideMsgToMsgReplyBg"
                app:cardElevation="0dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/cvReceivedMsgToMsgReply"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/ivReplyMediaThumbnail"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Krishna Sampath SRM AP"
                        android:maxLines="1"
                        android:textStyle="bold"
                        android:id="@+id/tvMsgSenderName"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_toStartOf="@id/ivReplyMediaThumbnail"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown_message"
                        android:id="@+id/tvSelectedMsgTxt"
                        android:layout_below="@id/tvMsgSenderName"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/messagesTextStyle"
                        android:layout_toStartOf="@id/ivReplyMediaThumbnail"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMessage"
                android:text="@string/wallpaper_preview_left_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:fontFamily="sans-serif"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:linksClickable="true"
                android:autoLink="all"
                style="@style/messagesTextStyle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                >

                <ImageView
                    android:layout_width="@dimen/extra_small_text_size"
                    android:layout_height="@dimen/extra_small_text_size"
                    android:id="@+id/ivReceivedEditedImage"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_gravity="center"
                    android:src="@drawable/message_edit"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/todo"
                    />

                <ImageView
                    android:layout_width="@dimen/extra_small_text_size"
                    android:layout_height="@dimen/extra_small_text_size"
                    android:id="@+id/ivStarImage"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_stars_24"
                    style="@style/messagesIconsStyle"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/todo"
                    />

                <TextView
                    android:id="@+id/tvReceivedMessageTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="02:30 AM"
                    android:fontFamily="sans-serif"
                    style="@style/messagesIconsStyle"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/extra_small_text_size" />


            </LinearLayout>

        </LinearLayout>




</LinearLayout>

    <View
        android:layout_width="20dp"
        android:layout_height="0dp"
        />

</LinearLayout>